Corregido error al importar materialize, definida estructura de rutas, creacion de plantilla de navbar, footer y algunos de prueba mas

--- a/angular.json
+++ b/angular.json
@@ -49,9 +49,14 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "./node_modules/materialize-css/dist/css/materialize.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.js",
+              "./node_modules/materialize-css/dist/js/materialize.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -113,9 +118,14 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "./node_modules/materialize-css/dist/css/materialize.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.js",
+              "./node_modules/materialize-css/dist/js/materialize.js"
+            ]
           }
         },
         "lint": {
@@ -144,6 +154,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Kokone-Learn"
+    }
+  },
+  "defaultProject": "Kokone-Learn",
+  "cli": {
+    "analytics": false
+  }
 }
