--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
     "@kolkov/angular-editor": "^1.1.2",
+    "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "materialize-css": "^1.0.0",
     "rxjs": "~6.5.5",
