--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "materialize-css": "^1.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
