--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 /node_modules
 /backend/node_modules
 
+#imagenes
+backend/src/public/images
+
 # profiling files
 chrome-profiler-events*.json
 speed-measure-plugin*.json
